[package]
name = "miradors"
version = "0.1.0"
authors = ["Benjamin Chastanier <benjamin.chastanier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.5"
envy = "0.4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
