[package]
name = "miradors"
version = "0.1.0"
authors = ["Benjamin Chastanier <benjamin.chastanier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4"
mailgun-rs = "0.1.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
